--- a/movies_app/templates/movies_app/home.html
+++ b/movies_app/templates/movies_app/home.html
@@ -30,6 +30,15 @@
     </div>
 </nav>
 
+<!-- 🔹 Sidebar Menu -->
+<div id="sidebar" class="sidebar">
+    <ul>
+        <li><a href="{% url 'home' %}">🏠 Home</a></li>
+        <li><a href="{% url 'liked_movies' %}">❤️ Liked Movies</a></li>
+        <li><a href="#">🤖 ML</a></li>
+    </ul>
+</div>
+
 <!-- 🔹 Trending Movies -->
 <div class="section">
     <h2>🔥 Trending This Week</h2>
@@ -39,14 +48,25 @@
                 <img src="{% if movie.poster_path %}https://image.tmdb.org/t/p/w300{{ movie.poster_path }}{% else %}{% static 'movies_app/default_poster.jpg' %}{% endif %}" alt="{{ movie.display_title }}">
                 <h4>{{ movie.display_title }}</h4>
                 <div class="rating-circle">{{ movie.display_rating }}</div>
-                <form method="post" action="{% url 'add_to_watchlist' %}" class="add-watchlist-form">
-                    {% csrf_token %}
-                    <input type="hidden" name="movie_id" value="{{ movie.id }}">
-                    <input type="hidden" name="title" value="{{ movie.display_title }}">
-                    <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
-                    <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
-                    <button type="submit" class="watchlist-btn" title="Add to Watchlist">➕</button>
-                </form>
+                <div class="action-buttons">
+                    <form method="post" action="{% url 'like_movie' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="movie_id" value="{{ movie.id }}">
+                        <input type="hidden" name="title" value="{{ movie.display_title }}">
+                        <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
+                        <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
+                        <button type="submit" class="like-btn" title="Like">❤️</button>
+                    </form>
+
+                    <form method="post" action="{% url 'add_to_watchlist' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="movie_id" value="{{ movie.id }}">
+                        <input type="hidden" name="title" value="{{ movie.display_title }}">
+                        <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
+                        <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
+                        <button type="submit" class="watchlist-btn" title="Add to Watchlist">➕</button>
+                    </form>
+                </div>
             </div>
         {% endfor %}
     </div>
@@ -61,14 +81,25 @@
                 <img src="{% if movie.poster_path %}https://image.tmdb.org/t/p/w300{{ movie.poster_path }}{% else %}{% static 'movies_app/default_poster.jpg' %}{% endif %}" alt="{{ movie.display_title }}">
                 <h4>{{ movie.display_title }}</h4>
                 <div class="rating-circle">{{ movie.display_rating }}</div>
-                <form method="post" action="{% url 'add_to_watchlist' %}" class="add-watchlist-form">
-                    {% csrf_token %}
-                    <input type="hidden" name="movie_id" value="{{ movie.id }}">
-                    <input type="hidden" name="title" value="{{ movie.display_title }}">
-                    <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
-                    <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
-                    <button type="submit" class="watchlist-btn" title="Add to Watchlist">➕</button>
-                </form>
+                <div class="action-buttons">
+                    <form method="post" action="{% url 'like_movie' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="movie_id" value="{{ movie.id }}">
+                        <input type="hidden" name="title" value="{{ movie.display_title }}">
+                        <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
+                        <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
+                        <button type="submit" class="like-btn" title="Like">❤️</button>
+                    </form>
+
+                    <form method="post" action="{% url 'add_to_watchlist' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="movie_id" value="{{ movie.id }}">
+                        <input type="hidden" name="title" value="{{ movie.display_title }}">
+                        <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
+                        <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
+                        <button type="submit" class="watchlist-btn" title="Add to Watchlist">➕</button>
+                    </form>
+                </div>
             </div>
         {% endfor %}
     </div>
@@ -83,18 +114,38 @@
                 <img src="{% if movie.poster_path %}https://image.tmdb.org/t/p/w300{{ movie.poster_path }}{% else %}{% static 'movies_app/default_poster.jpg' %}{% endif %}" alt="{{ movie.display_title }}">
                 <h4>{{ movie.display_title }}</h4>
                 <div class="rating-circle">{{ movie.display_rating }}</div>
-                <form method="post" action="{% url 'add_to_watchlist' %}" class="add-watchlist-form">
-                    {% csrf_token %}
-                    <input type="hidden" name="movie_id" value="{{ movie.id }}">
-                    <input type="hidden" name="title" value="{{ movie.display_title }}">
-                    <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
-                    <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
-                    <button type="submit" class="watchlist-btn" title="Add to Watchlist">➕</button>
-                </form>
+                <div class="action-buttons">
+                    <form method="post" action="{% url 'like_movie' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="movie_id" value="{{ movie.id }}">
+                        <input type="hidden" name="title" value="{{ movie.display_title }}">
+                        <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
+                        <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
+                        <button type="submit" class="like-btn" title="Like">❤️</button>
+                    </form>
+
+                    <form method="post" action="{% url 'add_to_watchlist' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="movie_id" value="{{ movie.id }}">
+                        <input type="hidden" name="title" value="{{ movie.display_title }}">
+                        <input type="hidden" name="poster_path" value="{{ movie.poster_path }}">
+                        <input type="hidden" name="vote_average" value="{{ movie.display_rating }}">
+                        <button type="submit" class="watchlist-btn" title="Add to Watchlist">➕</button>
+                    </form>
+                </div>
             </div>
         {% endfor %}
     </div>
 </div>
+
+<!-- JS to toggle sidebar -->
+<script>
+    const menuIcon = document.querySelector('.menu-icon');
+    const sidebar = document.getElementById('sidebar');
+    menuIcon.addEventListener('click', () => {
+        sidebar.classList.toggle('show');
+    });
+</script>
 
 </body>
 </html>
