--- a/movies_app/static/movies_app/home_style.css
+++ b/movies_app/static/movies_app/home_style.css
@@ -175,3 +175,9 @@ body {
 .hidden {
     display: none;
 }
+
+.movie-card-link {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
